fix: resolve problem when header overlaps the section header when moved by mouse click from the menu

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ a {
 
 .section-title {
     margin-bottom: 20px;
+    padding-top: 70px;
     font-size: 32px;
     color: var(--title-dark-green);
     text-align: center;
